[package]
name = "concurrent-round-robin"
version = "0.1.0"
edition = "2021"
authors = ["blazh <blazh@163.com>"]
keywords = ["roundrobin", "concurrent"]
readme = "README.md"
license = "MIT"
description = "A concurrent wrr implementation for rust"
repository = "https://github.com/blazood/concurrent-round-robin"

[dependencies]
chrono = "0.4"
dashmap = {version="5.1", features=["raw-api"]}